--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=4MB
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sumitsinghrawat34@gmail.com
+spring.mail.password=bxuk iwri emuj oqtw
+#spring.mail.properties.mail.smtp.ssl.enable=true;
+spring.mail.properties.mail.smtp.auth=true;
+spring.mail.properties.mail.smtp.starttls.enable=true;
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.debug=true
